# include/libevdevxx/Makefile.am


libevdevxxdir = $(includedir)/libevdevxx
nobase_libevdevxx_HEADERS = \
	AbsInfo.hpp \
	Code.hpp \
	detail/NumberBase.hpp \
	detail/ScopedFile.hpp \
	Device.hpp \
	evdevxx.hpp \
	Event.hpp \
	Grabber.hpp \
	Property.hpp \
	ReadFlag.hpp \
	ReadStatus.hpp \
	SyncError.hpp \
	Type.hpp \
	TypeCode.hpp \
	Uinput.hpp
